# Scarlett-Engine

./: .gitmodules  CMakeLists.txt  LICENSE
Source/: CMakeLists.txt  Engine.cc  Window.cc
Source/CMake/: AddDependencies.cmake  AddSources.cmake  Addpsstmath.cmake  BuildSDL2.cmake  Buildminiaudio.cmake
Source/Include/Scarlett/: Math.hh
Source/Include/Scarlett/Graphics/: Window.hh
Source/Include/Scarlett/Math/: Vector2.hh  Vector3.hh
